--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -13,11 +13,11 @@
     display: flex;
     max-width: 90%;
     /* border: 1px solid hsl(0, 0%, 89%); */
-    border-radius: 5px 5px 0px 0px;
-    border-right: 3px solid #aa3c3c;
+    border-radius: 10px;
+    /* border-right: 3px solid #aa3c3c; */
     /* margin-right: -4px; */
     border-right: -196px solid white;
-    box-shadow: 0px 0px 20px #ff6f6114;
+    box-shadow: 0px 0px 0px 3px #38c0a9;
     /* box-shadow: 0px -15px 0px 1px #38c0a9, 0px 0px 0px 1px #38c0a9; */
     flex-direction: column;
     align-items: center;
@@ -25,14 +25,16 @@
     /* height: fit-content; */
     /* min-width: 19em; */
     justify-content: center;
-    margin: 4px;
+    margin: 20px;
     align-content: center;
     /* overflow: visible; */
     flex-wrap: nowrap;
     width: -webkit-min-content;
     width: -moz-min-content;
     width: min-content;
-    transition:  border-right 0.3s;
+    max-height: min-content;
+    transition: border-right 0.3s;
+
 }
 
 
@@ -46,7 +48,7 @@
 
 .listitem:active {
     cursor:pointer;
-    background: #fe706126;
+    background: #3846c08a;
 }
 
 .postitem__thumbnail img {
