--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -12,8 +12,9 @@
     height: 100vh;
     justify-content: flex-start;
     align-content: center;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
+    width: 100%;
 }
 
 .header {
