--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -14,7 +14,6 @@
     align-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100%;
 }
 
 .header {
@@ -22,6 +21,7 @@
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
+    width: 90vw;
 }
 
 .backToHome {
@@ -51,7 +51,7 @@
 
 .logo {
     transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
-    height: 5em;
+    height: 8vw;
     margin-top: 0px;
     cursor: pointer;
 }
