--- a/components/navmenu.module.css
+++ b/components/navmenu.module.css
@@ -1,20 +1,21 @@
 .container {
-    align-self: center;
-    /* width: 80%; */
-    display: flex;
-    /* margin-top: 50px; */
-    /* border: 1px solid #FF6F61; */
-    /* padding: 20px; */
-    border-radius: 40px;
-    align-items: center;
-    flex-wrap: nowrap;
-    width: 150vw;
-    border: 0px solid;
-    /* padding: 30px; */
-    border-radius: 50px;
-    margin: 30px;
-    box-shadow: 0 0 50px #0000003b;
-    justify-content: center;
+  align-self: center;
+  max-width: 90vw;
+  display: flex;
+  /* margin-top: 50px; */
+  /* border: 1px solid #FF6F61; */
+  /* padding: 20px; */
+  border-radius: 40px;
+  flex-wrap: nowrap;
+  /* width: 150vw; */
+  border: 0px solid;
+  /* padding: 30px; */
+  border-radius: 50px;
+  /* margin: 30px; */
+  margin-right: 10%;
+  margin-left: 10%;
+  box-shadow: 0 0 50px #0000003b;
+  justify-content: space-between;
 
 }
 .container .btn {
@@ -31,15 +32,17 @@
 
 
 .btn{
-    margin:20px;
+    margin:1vw;
   color:#999;
   background:rgba(0, 0, 0, 0.5);
-  padding:10px 40px;
+  padding:1em;
   font-size:0.7rem;
   text-decoration:none;
   letter-spacing:4px;
   text-transform:uppercase;
   border-radius:30px;
+  text-align: center;
+  align-self: center;
 }
 
 .btn:hover {
