--- a/styles/global.css
+++ b/styles/global.css
@@ -12,7 +12,7 @@ user-select: none; /* Standard */
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     line-height: 1.6;
     font-size: 18px;
-    overflow:hidden;
+    overflow:scroll;
 }
 
 * {
@@ -47,8 +47,9 @@ img {
 }
 
 .title-container {
-    letter-spacing: 10px;
-    /* width: 70%; */
+    letter-spacing: 0.7vw;
+    width: 50vw;
+    font-size: 2vw;
     text-align: justify;
 }
 
