--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,9 +1,9 @@
 .heading2Xl {
-    font-size: 4rem; 
     /* line-height: 1.2; */
     font-weight: 800;
     letter-spacing: 1rem;
     margin: 0rem 0;
+    font-size: 2em;
 }
 
 .headingXl {
