--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -17,7 +17,7 @@
     /* border-right: 3px solid #aa3c3c; */
     /* margin-right: -4px; */
     border-right: -196px solid white;
-    box-shadow: 0px 0px 0px 3px #38c0a9;
+    /* box-shadow: 0px 0px 0px 3px #38c0a9; */
     /* box-shadow: 0px -15px 0px 1px #38c0a9, 0px 0px 0px 1px #38c0a9; */
     flex-direction: column;
     align-items: center;
@@ -45,6 +45,9 @@
     background: #38c0a92b;
         box-shadow: 0px -15px 0px 1px #38c0a9, 0px 0px 0px 1px #38c0a9;
 }
+.listitem:hover .readMore{
+   display:unset;
+}
 
 .listitem:active {
     cursor:pointer;
@@ -61,22 +64,28 @@
 
 .postitem__thumbnail figure, .listitem__thumbnail figure {
     /* margin: 0px; */
-    margin-left: 0px;
+    /* margin-left: 0px; */
     align-self: center;
 }
 
 .listitem__thumbnail img {
-    max-width: 10em;
+    width: 10em;
+    
     border-radius: 30px 30px 30px 50px;
     box-shadow: 1px 1px 20px #463f3f;
     /* height: auto; */
     border: 1px solid #38c0a9;
     padding: 8px;
     transition: transform 0.2s;
+    transition: all 0.2s;
+    margin-bottom:10px;
+
 }
 
 .listitem__thumbnail img:hover {
-transform: scale(1.1);
+transform: scale(1);
+padding:0px;
+margin-bottom:0px;
 cursor:pointer;
 }
 
@@ -93,14 +102,14 @@ font-variant-caps: all-small-caps;
 
 .listitem__content h2 {
     /* border-bottom: 5px solid red; */ 
-    margin-top: -7px;
+    margin: 0px;
     color: #38c0a9;
     border: 1px solid #38c0a9;
     padding: 7px;
     /* padding-bottom: 23px; */
     /* width: 70%; */
     line-height: 0.7em;
-    background: #2d3343;
+    /* background: #2d3343; */
     border-bottom: 7px solid #2e7dff;
     color: white;
     align-self: center;
@@ -238,4 +247,5 @@ font-variant-caps: all-small-caps;
     position: absolute;
     top: -0.5em;
     left: 10px;
+    display:none;
 }
