--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -20,10 +20,8 @@
 .header {
     display: flex;
     flex-direction: row-reverse;
-    align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     width: 90vw;
-    align-content: center;
 }
 
 .backToHome {
