--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -56,6 +56,8 @@
 
 .postitem__thumbnail img {
   max-width: 10em;
+  min-height: 10em;
+
   border-radius: 79px 0px 0px;
   box-shadow: 1px 1px 20px #463f3f;
   height: auto;
