--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -221,7 +221,7 @@ font-variant-caps: all-small-caps;
     height: -webkit-fit-content;
     height: -moz-fit-content;
     min-height: fit-content;
-    height: 100%;
+    /* height: 100%; */
     padding-bottom: 5em;
     margin-right: 7em;
     box-shadow: 2px 2px 50px 1px #38c0a966;
